--- a/nlp/classification.ipynb
+++ b/nlp/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "(70, 0.9857142857142858, 0.9857142857142858)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -45,53 +45,53 @@
        "(('__label__NORMAL',), array([1.00001001]))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(\"收 皮\")"
+    "model.predict(\"風向\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('__label__NORMAL',), array([1.00000811]))"
+       "(('__label__NORMAL',), array([0.99825156]))"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(\"屌 你\")"
+    "model.predict(\"前線\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('__label__TROLL',), array([0.73550296]))"
+       "(('__label__TROLL',), array([0.61024791]))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(\"小圈子\")"
+    "model.predict(\"飯民\")"
    ]
   },
   {
