--- a/classification/classification.ipynb
+++ b/classification/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "[11320 rows x 7 columns]"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,9 @@
     "\n",
     "ac = nx.eigenvector_centrality(G)\n",
     "cluster = nx.clustering(G)\n",
-    "betweenness = nx.betweenness_centrality(G)"
+    "betweenness = nx.betweenness_centrality(G)\n",
+    "\n",
+    "nx.write_gexf(G, \"lihkg.gexf\")"
    ]
   },
   {
