Added overfitting and underfitting to NLP classifier so that ratio between trolls and non-trolls can be set for training, Not yet tested this function

--- a/nlp/data_clean.ipynb
+++ b/nlp/data_clean.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import jieba"
+    "import jieba\n",
+    "import progressbar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +24,7 @@
      "text": [
       "Building prefix dict from C:\\Users\\wormw\\Documents\\comp4641-project\\nlp\\merged_dict.txt ...\n",
       "Loading model from cache C:\\Users\\wormw\\AppData\\Local\\Temp\\jieba.ub49ffea3258cac9781f19edeac8a403e.cache\n",
-      "Loading model cost 1.044 seconds.\n",
+      "Loading model cost 1.310 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
@@ -35,19 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# with open('../scraper/posts.json') as f:\n",
     "#   posts = json.load(f)\n",
     "\n",
-    "posts = pd.read_pickle(\"../lihkg_data/li_data_final.pkl\")"
+    "posts_data = pd.read_pickle(\"../lihkg_data/li_data_final.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +65,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for post in posts:\n",
+    "num_troll = 0\n",
+    "num_normal = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-8e9ba6439516>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# np.random.shuffle(lines)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpost\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mprogressbar\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprogressbar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mposts_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpost\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'msg'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mpost\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'msg'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mRIBBISH_POST\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mpost\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'user_id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mKNOWN_TROLLS\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "# for post in posts:\n",
+    "#     if len(post['msg'].strip()) != 0 and post['msg'] not in RIBBISH_POST:\n",
+    "#         if post['user_id'] in KNOWN_TROLLS:\n",
+    "#             lines.append('__label__TROLL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "#         else:\n",
+    "#             lines.append('__label__NORMAL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "#\n",
+    "# np.random.shuffle(lines)\n",
+    "\n",
+    "for index, post in progressbar.progressbar(posts_data.iterrows()):\n",
     "    if len(post['msg'].strip()) != 0 and post['msg'] not in RIBBISH_POST:\n",
     "        if post['user_id'] in KNOWN_TROLLS:\n",
     "            lines.append('__label__TROLL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "            num_troll += 1\n",
     "        else:\n",
     "            lines.append('__label__NORMAL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "            num_normal += 1\n",
     "\n",
     "np.random.shuffle(lines)"
    ]
@@ -80,9 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_lines = len(lines)\n",
-    "\n",
-    "print(num_lines)"
+    "print(\"Total number of troll lines:\", num_troll)\n",
+    "print(\"Total number of non-troll lines:\", num_normal)\n",
+    "num_lines = num_troll + num_normal\n",
+    "print(\"Total lines:\", num_lines)"
    ]
   },
   {
@@ -91,9 +126,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = lines[:round(num_lines*0.75)]\n",
-    "training = lines[num_lines*0.75:]\n",
+    "test_train_ratio = 0.7  # Ratio for training set and testing set\n",
+    "test = lines[:round(num_lines * test_train_ratio)]\n",
+    "training = lines[round(num_lines * test_train_ratio):]\n",
     "output = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-8-72412952ca44>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-8-72412952ca44>\"\u001b[1;36m, line \u001b[1;32m14\u001b[0m\n\u001b[1;33m    while num_trolls_add > 0:\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "resampling_ratio = 0.3  # Ratio for trolls and non-trolls\n",
+    "over_ratio = 0.7  # Ratio of oversampling and undersampling; ie. add vs remove\n",
+    "\n",
+    "num_trolls_missing = round(num_lines * resampling_ratio) - num_troll\n",
+    "if num_trolls_missing > 0:\n",
+    "    num_trolls_add = round(num_trolls_missing * over_ratio)\n",
+    "    num_normal_remove = num_trolls_missing - num_trolls_add\n",
+    "    while num_normal_remove > 0:\n",
+    "        rand_index = np.random.randint(0, len(training))\n",
+    "        if training[rand_index][0:15] == '__label__NORMAL':\n",
+    "            training.pop(rand_index)\n",
+    "            num_normal_remove -= 1\n",
+    "    new_num_training = len(training)\n",
+    "    while num_trolls_add > 0:\n",
+    "        rand_index = np.random.randint(0, new_num_training)\n",
+    "        if training[rand_index][0:15] == '__label__TROLL ':\n",
+    "            training.insert(len(training), training[rand_index])\n",
+    "            num_trolls_add -= 1"
    ]
   },
   {
