Modified data clean for nlp. Added model tuning to test different hyperparameters for nlp supervised classification.

--- a/nlp/classification.ipynb
+++ b/nlp/classification.ipynb
@@ -2,94 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install fasttext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fasttext\n",
-    "import fasttext.util\n",
-    "\n",
-    "model = fasttext.train_supervised(input=\"train.txt\", epoch=25)\n",
-    "\n",
-    "model.save_model(\"model_troll.bin\")"
+    "import fasttext.util"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tune model with different hyperparameters\n",
+    "epoch = [5, 10, 15, 20, 25, 30, 35]\n",
+    "learning_rate = [0.2, 0.4, 0.6, 0.8, 1.0]\n",
+    "ngram = [1, 2, 3]\n",
+    "\n",
+    "# store result in results\n",
+    "results = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(70, 0.9857142857142858, 0.9857142857142858)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'epoch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-f5f3c528bbca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mepoch_val\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mepoch\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mlearning_rate_val\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mngram_val\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mngram\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m             \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfasttext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_supervised\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"../lihkg_data/nlp_train.txt\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mepoch_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlearning_rate_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwordNgrams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mngram_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m             \u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../lihkg_data/nlp_test.txt\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'epoch' is not defined"
+     ]
     }
    ],
    "source": [
-    "model.test(\"test.txt\")"
+    "for epoch_val in epoch:\n",
+    "    for learning_rate_val in learning_rate:\n",
+    "        for ngram_val in ngram:\n",
+    "            print(\"Training: epoch =\", epoch_val, \"learning_rate =\", learning_rate_val, \"ngram =\", ngram_val)\n",
+    "            model = fasttext.train_supervised(input = \"../lihkg_data/nlp_train.txt\", epoch = epoch_val, lr = learning_rate_val, wordNgrams = ngram_val)\n",
+    "            N, p, r = model.test(\"../lihkg_data/nlp_test.txt\")\n",
+    "            fscore = (2*p*r)/(p+r)\n",
+    "            result = [epoch_val, learning_rate_val, ngram_val, p, r, fscore]\n",
+    "            results.append(result)\n",
+    "            print(result)\n",
+    "results = pd.DataFrame(results)\n",
+    "results.columns = [\"epoch\", \"learning_rate\", \"ngram\", \"precision\", \"recall\", \"fscore\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('__label__NORMAL',), array([1.00001001]))"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# print the combination of hyperparameters with the highest f-score\n",
+    "results.loc[results['fscore'].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use the best model\n",
+    "model = fasttext.train_supervised(input=\"../lihkg_data/nlp_train.txt\", epoch=25, verbose = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_model(\"../lihkg_data/nlp_model_troll.bin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.test(\"../lihkg_data/nlp_test.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model.predict(\"風向\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('__label__NORMAL',), array([0.99825156]))"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.predict(\"前線\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('__label__TROLL',), array([0.61024791]))"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.predict(\"飯民\")"
    ]
@@ -118,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
