Update on nlp data clean and classification

--- a/nlp/data_clean.ipynb
+++ b/nlp/data_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
      "text": [
       "Building prefix dict from C:\\Users\\wormw\\Documents\\comp4641-project\\nlp\\merged_dict.txt ...\n",
       "Loading model from cache C:\\Users\\wormw\\AppData\\Local\\Temp\\jieba.ub49ffea3258cac9781f19edeac8a403e.cache\n",
-      "Loading model cost 2.015 seconds.\n",
+      "Loading model cost 3.698 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,15 +48,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "KNOWN_TROLLS = ['41853','194398','76776','71393','30019','37596','63950','310982','282494','72457','326966','322121','322637','121095','169','213597','226126','245201','159448','149494','181778','324892','273582','118226','240250','316329','77788','219767','71341','12186','228352','75196','28435','25002','247732','322304','258598','133525','14941','27416','222907','48631','158008','289946','96230','40470','186800','30788','288523','254191','84585','85242','123870','89514','170281','103799','64699','49699','299923','71140','122676','61748','202464','288351','234658','277044','149978','6237','98232','69484','165028','328913','132380','146030','331780','266100','52773','275585','249366','41351','273474','39751','51615','326708','213952','1210','270563','241151','70493','335209','276916','232237','94819','78468','203248','100028','291185','95649','332154','83060','264328','244624','105890','5591','171664','23721','129619','326414','14965','51985','191271','253253','25771','153956','32583','72825','336250','58089','70734','124277','173333','155597','137604','276602','41818','162674','151378','295632','147880','314774','57035','88029','97104','216114','64295','28833','203010','264400','273157','238973','57405','28870','132128','199261','126609','65530','172349','173849','192248','261633','127675','34757','166655','228589','343059','144849']\n",
     "\n",
-    "RIBBISH_POST = ['推', 'Push', 'push', '1', '此回覆已被刪除', 'pish', 'PUSH']\n",
+    "TROLLS_FROM_LABLING = ['71341', '119756', '268846', '161758', '324560', '103312', '12444', '101824', '294199', '134739', '198278']\n",
     "\n",
-    "lines = []"
+    "RIBBISH_POST = ['推', 'Push', 'push', '1', '此回覆已被刪除', 'pish', 'PUSH']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_train_ratio = 0.7  # Ratio for training set and testing set\n",
+    "resampling_ratio = 0.3  # Ratio for trolls and non-trolls\n",
+    "over_ratio = 0.7  # Ratio of oversampling and undersampling; ie. add vs remove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7619975\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_lines = posts_data.shape[0]\n",
+    "num_train = round(num_lines * test_train_ratio)\n",
+    "num_test = num_lines - num_train\n",
+    "print(num_lines)"
    ]
   },
   {
@@ -66,7 +97,11 @@
    "outputs": [],
    "source": [
     "num_troll = 0\n",
-    "num_normal = 0"
+    "num_normal = 0\n",
+    "num_troll_train = 0\n",
+    "num_normal_train = 0\n",
+    "num_troll_test = 0\n",
+    "num_normal_test = 0"
    ]
   },
   {
@@ -75,7 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(progressbar)"
+    "train_lines = []\n",
+    "test_lines = []"
    ]
   },
   {
@@ -93,16 +129,27 @@
     "#\n",
     "# np.random.shuffle(lines)\n",
     "\n",
+    "posts_data = posts_data.sample(frac=1).reset_index(drop=True)\n",
+    "\n",
     "for index, post in posts_data.iterrows():\n",
     "    if len(post['msg'].strip()) != 0 and post['msg'] not in RIBBISH_POST:\n",
-    "        if post['user_id'] in KNOWN_TROLLS:\n",
-    "            lines.append('__label__TROLL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "        if (post['user_id'] in KNOWN_TROLLS) or (post['user_id'] in TROLLS_FROM_LABLING):\n",
+    "            if index <= num_train:\n",
+    "                train_lines.append('__label__TROLL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "                num_troll_train += 1\n",
+    "            else:\n",
+    "                test_lines.append('__label__TROLL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "                num_troll_test += 1\n",
     "            num_troll += 1\n",
     "        else:\n",
-    "            lines.append('__label__NORMAL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "            if index <= num_train:\n",
+    "                train_lines.append('__label__NORMAL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "                num_normal_train += 1\n",
+    "            else:\n",
+    "                test_lines.append('__label__NORMAL ' + ' '.join(jieba.cut(post['msg'].replace('\\n',' ').replace(' ', '').strip(), cut_all=False)))\n",
+    "                num_normal_test += 1\n",
     "            num_normal += 1\n",
-    "\n",
-    "np.random.shuffle(lines)"
+    "\n"
    ]
   },
   {
@@ -111,10 +158,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"Statistics:\")\n",
+    "print(\"Total number of lines:\", num_lines)\n",
+    "print(\"Total number of lines in training:\", num_train)\n",
+    "print(\"Total number of lines in testing:\", num_test)\n",
     "print(\"Total number of troll lines:\", num_troll)\n",
     "print(\"Total number of non-troll lines:\", num_normal)\n",
-    "num_lines = num_troll + num_normal\n",
-    "print(\"Total lines:\", num_lines)"
+    "print(\"Total number of troll lines in training:\", num_troll_train)\n",
+    "print(\"Total number of non-troll lines in training:\", num_normal_train)\n",
+    "print(\"Total number of troll lines in testing:\", num_troll_test)\n",
+    "print(\"Total number of non-troll lines in testing:\", num_normal_test)"
    ]
   },
   {
@@ -123,35 +176,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_train_ratio = 0.7  # Ratio for training set and testing set\n",
-    "test = lines[:round(num_lines * test_train_ratio)]\n",
-    "training = lines[round(num_lines * test_train_ratio):]\n",
-    "output = ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resampling_ratio = 0.3  # Ratio for trolls and non-trolls\n",
-    "over_ratio = 0.7  # Ratio of oversampling and undersampling; ie. add vs remove\n",
-    "\n",
-    "num_trolls_missing = round(num_lines * resampling_ratio) - num_troll\n",
+    "num_trolls_missing = round(num_training * resampling_ratio) - num_troll_train\n",
     "if num_trolls_missing > 0:\n",
     "    num_trolls_add = round(num_trolls_missing * over_ratio)\n",
     "    num_normal_remove = num_trolls_missing - num_trolls_add\n",
     "    while num_normal_remove > 0:\n",
-    "        rand_index = np.random.randint(0, len(training))\n",
-    "        if training[rand_index][0:15] == '__label__NORMAL':\n",
-    "            training.pop(rand_index)\n",
+    "        rand_index = np.random.randint(0, len(train_lines))\n",
+    "        if train_lines[rand_index][0:15] == '__label__NORMAL':\n",
+    "            train_lines.pop(rand_index)\n",
     "            num_normal_remove -= 1\n",
-    "    new_num_training = len(training)\n",
+    "    new_num_training = len(train_lines)\n",
     "    while num_trolls_add > 0:\n",
     "        rand_index = np.random.randint(0, new_num_training)\n",
-    "        if training[rand_index][0:15] == '__label__TROLL ':\n",
-    "            training.insert(len(training), training[rand_index])\n",
+    "        if train_lines[rand_index][0:15] == '__label__TROLL ':\n",
+    "            train_lines.insert(len(train_lines), training[rand_index])\n",
     "            num_trolls_add -= 1"
    ]
   },
@@ -161,7 +199,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for line in training:\n",
+    "output = ''\n",
+    "\n",
+    "for line in train_lines:\n",
     "    output += line + '\\n'\n",
     "\n",
     "with open('../lihkg_data/nlp_train.txt', 'w') as the_file:\n",
@@ -176,7 +216,7 @@
    "source": [
     "output = ''\n",
     "\n",
-    "for line in test:\n",
+    "for line in test_lines:\n",
     "    output += line + '\\n'\n",
     "            \n",
     "with open('../lihkg_data/nlp_test.txt', 'w') as the_file:\n",
